static/assets/sass/main.css
/* ... */
.single-search-result h3 a {
  color: #4d4dcb;
  font-size: 16px;
  font-family: roboto;
  line-height: 26px; }

.single-search-result h3 {
  margin-bottom: 0;
  line-height: 0; }

.single-search-result a {
  color: #00a651;
  font-size: 12px;
  font-family: roboto;
  display: block; }

.result-thumb {
  width: 60px;
  float: left;
  overflow: hidden;
  margin-right: 10px; }

.result-description-wrapper {
  overflow: hidden;
  margin-top: 5px; }

.result-description {
  overflow: hidden; }

.result-description p {
  overflow: hidden;
  font-size: 12px; }

.single-search-result {
  border-bottom: 1px solid #f2f2f2;
  padding: 8px 20px;
  transition: 0.3s ease-in-out; }

.single-search-result:last-child {
  border-bottom: none; }

.single-search-result:hover {
  background: #f2f2f2; }

.single-search-result:hover.single-search-result h3 a {
  text-decoration: underline; }

/* pagination start */
.pagination-list ul li {
  display: inline-block; }

.pagination-list li a {
  display: block;
  padding: 5px;
  border: 1px solid #ddd;
  min-width: 30px;
  height: 30px;
  line-height: 20px;
  font-size: 12px;
  color: #333;
  text-align: center;
  border-radius: 3px; }

.pagination-list {
  text-align: center;
  display: block;
  margin: 20px; }

.pagination-list li a.is-active {
  background: #4d4dcb;
  color: #ffffff; }

/* pagination end */
/* right sidebar search end */
/* version section style start */
.select select.is-active,
.select select.is-focused,
.select select:active,
.select select:focus,
.button.is-focused:not(:active),
.button:focus:not(:active) {
  box-shadow: none;
  border-color: none; }

.kd-version .icon {
  color: #32325d !important;
  font-size: 15px;
  margin-top: 2px; }

.navbar-link:not(.is-arrowless)::after,
.select:not(.is-multiple):not(.is-loading)::after {
  border-color: #999;
  height: 8px;
  width: 8px; }

.kd-version .dropdown,
.kd-version .dropdown-trigger,
.kd-version .dropdown,
.kd-version .dropdown-menu {
  width: 100%;
  padding-top: 0; }

.dropdown.is-active .dropdown-trigger button {
  background: #f5f7f9; }

.dropdown-trigger button.button .tag {
  margin-left: 115px;
  background: #f4e5e5;
  color: #9d0a0e;
  font-weight: 500;
  font-family: "Roboto", sans-serif; }

.dropdown-trigger span strong {
  padding-right: 15px; }

.kd-version .button {
  padding-left: 20px;
  height: 38px;
  background: #ebebeb; }

button.button.is-fullwidth {
  justify-content: space-between;
  border: none; }

.kd-version .dropdown-content {
  border-radius: 4px;
  box-shadow: 0px 5px 16px rgba(0, 0, 0, 0.16);
  padding: 0; }

.kd-version a.dropdown-item {
  padding: 7px 30px;
  border-bottom: 1px solid #ececec;
  font-family: "Roboto", sans-serif;
  color: #32325d;
  transition: 0.2s ease-in-out;
  overflow: hidden; }

.kd-version a.dropdown-item:last-child {
  border-bottom: none; }

.kd-version a.dropdown-item:hover {
  background: #00A651;
  color: #ffffff; }

.kd-version a.dropdown-item:first-child:hover {
  border-radius: 4px 4px 0 0; }

.kd-version a.dropdown-item:last-child:hover {
  border-radius: 0 0 4px 4px; }

.kd-version a.dropdown-item .tag {
  float: right;
  overflow: hidden;
  background: #f4e5e5;
  color: #9d0a0e; }

.kd-version {
  margin-bottom: 15px; }

.dropdown.is-active .button .icon:last-child:not(:first-child) {
  transform: rotate(180deg); }

/* version section style end */
.item ul,
.item input[type="checkbox"] {
  display: none;
  overflow: hidden;
  transition: 0.3s; }

.kd-sidebar-menu .item label a {
  font-weight: 600;
  color: #4a4a4a;
  padding: 8px 17px;
  display: block; }

.item ul li.is-active a {
  color: #00A651; }

.item input:checked ~ ul,
.item input:checked ~ .item > ul {
  display: block;
  transition: 0.3s linear; }

.item input:checked ~ label span,
.item input:checked ~ .item > label span {
  transform: rotate(90deg);
  margin-top: 0;
  transform-origin: 0; }

.item label span {
  position: absolute;
  right: 15px;
  transition: 0.3s ease-in-out;
  top: 9px; }

.item ul li a {
  display: block;
  padding: 6px 0;
  font-family: "Roboto", sans-serif;
  font-weight: 400; }

.item label {
  position: relative;
  z-index: 9; }

.kd-sidebar-menu label,
.kd-sidebar-menu li a {
  font-size: 14px;
  font-weight: 500;
  color: #4a4a4a;
  display: block;
  cursor: pointer;
  user-select: none;
  margin-top: 10px;
  margin-top: 5px;
  transition: 0.3s; }

.kd-sidebar-menu li a:hover {
  color: #00A651; }

.kd-sidebar-menu .item ul {
  margin-left: 20px;
  padding-left: 15px;
  border-left: 1px solid #e2e2e2; }

.item input:checked ~ label,
.item input:checked ~ .item > label {
  border: 1px solid #e2e2e2;
  background: #ffffff; }

.appscode-style .item input:checked ~ label > a {
  color: #00A651; }

.kd-left-sidebar {
  margin-right: 30px;
  position: sticky;
  top: 130px;
  z-index: 9; }

.kd-sidebar-menu {
  max-height: 65vh;
  overflow-y: auto; }

.kd-sidebar-menu .item label {
  border: 1px solid transparent;
  position: relative;
  z-index: 1;
  border-radius: 3px 0 0 3px; }

.trial-button .button {
  background-color: #00A651;
  color: #ffffff;
  font-size: 14px;
  height: 40px; }

.trial-button {
  margin-bottom: 15px; }

span.new-item {
  color: #9d0a0e;
  font-size: 12px;
  font-weight: 500;
  background: #e3d4d4;
  padding: 3px 10px;
  border-radius: 4px;
  line-height: 12px;
  height: 20px;
  position: absolute;
  right: 30px; }

/* dropdown mega menu start */
.menu-header {
  overflow: hidden; }

.menu-logo {
  width: 20px;
  float: left;
  margin-right: 10px;
  margin-top: 4px; }

.menu-header h5 {
  float: left;
  font-size: 16px;
  color: #242a31;
  font-weight: 700; }

.menu-body p {
  font-size: 12px;
  color: #393e46; }

.single-product-item {
  padding: 15px; }

.byte-builder.kd-orange {
  background-color: #fef0d9 !important; }

.byte-builder.kd-orange:hover {
  background-color: #fde0b0 !important; }
/* ... */

